syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-user/api/proto/v1";

message ConfirmUserAvatarUploadingRequest {
  string userId = 1;
  string avatarLink = 2;
}

message ConfirmUserAvatarUploadingResponse {
  string message = 1;
}
